# SineOrgan

./: .gitignore  CMakeLists.txt  main.cpp
Base/: InstrumentBase.cpp  InstrumentBase.h
Concrete/: InputDeviceSDL.cpp  InputDeviceSDL.h  OutputDeviceSDL.cpp  OutputDeviceSDL.h  SineOrgan.cpp  SineOrgan.h
Interface/: OrganInterface.h  OutputDeviceInterface.h
Lib/: WaveMath.h
